--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "4.0.3",
     "react-xml-parser": "^1.1.8",
     "stream-browserify": "^3.0.0",
     "timers-browserify": "^2.0.12",
